create and center playing board - machine

--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Super Slots</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script defer src="js/main.js"></script>
 </head>
 <body>
-    
+<h1>Super Slots</h1>
+<table id ="machine">
+<tr>
+<td id="slot1"><div>Slot 1</div></td>
+<td id="slot2"><div>Slot 2</div></td>
+<td id="slot3"><div>Slot 3</div></td>
+</tr>
+</table>
+<button>Spin!</button>
 </body>
 </html>
