create game board called machine, add images, begin styling, begin adding to main js

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <h1>Super Slots</h1>
 <table id ="machine">
-<tr>
+<tr id="slots">
 <td id="slot1"><div>Slot 1</div></td>
 <td id="slot2"><div>Slot 2</div></td>
 <td id="slot3"><div>Slot 3</div></td>
