set slotFigures object array and create function to render random numbers

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="css/style.css">
     <script defer src="js/main.js"></script>
 </head>
+
 <body>
+
 <h1>Super Slots</h1>
+
 <table id ="machine">
 <tr id="slots">
 <td id="slot1"><div>Slot 1</div></td>
@@ -16,6 +19,10 @@
 <td id="slot3"><div>Slot 3</div></td>
 </tr>
 </table>
-<button>Spin!</button>
+
+<button id="spin">Spin!</button>
+<button id="reset">Play Again</button>
+
 </body>
+
 </html>
