add neon font effect

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <table id ="machine">
 <tr id="slots">
-<td id="slot1"><div>Slot 1</div></td>
-<td id="slot2"><div>Slot 2</div></td>
-<td id="slot3"><div>Slot 3</div></td>
+<td id="slot1"><img src="/imgs/seven.jpg" height="100%%" width="100%%"></td>
+<td id="slot2"><img src="/imgs/seven.jpg" height="100%%" width="100%%"></td>
+<td id="slot3"><img src="/imgs/seven.jpg" height="100%%" width="100%%"></td>
 </tr>
 </table>
 
