add flash effect

--- a/index.html
+++ b/index.html
@@ -4,24 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Super Slots</title>
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script defer src="js/main.js"></script>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
+  />
 </head>
 
 <body>
 
-<h1>Super Slots</h1>
+<h1 class="animate__animated animate__flash">Super Slots</h1>
 
 <table id ="machine">
 <tr id="slots">
-<td id="slot1"><img src="/imgs/seven.jpg" height="100%%" width="100%%"></td>
-<td id="slot2"><img src="/imgs/seven.jpg" height="100%%" width="100%%"></td>
-<td id="slot3"><img src="/imgs/seven.jpg" height="100%%" width="100%%"></td>
+<td class="animate__animated animate__flash" id="slot1"><img src="/imgs/seven.jpg" height="100%%" width="100%%"></td>
+<td class="animate__animated animate__flash" id="slot2"><img src="/imgs/crown.jpg" height="100%%" width="100%%"></td>
+<td class="animate__animated animate__flash" id="slot3"><img src="/imgs/seven.jpg" height="100%%" width="100%%"></td>
 </tr>
 </table>
 
-<button id="spin">Spin!</button>
-<button id="reset">Play Again</button>
+<button class="animate__animated animate__flash"  id="spin">Spin!</button>
+<button class="animate__animated animate__flash"  id="reset">Play Again</button>
 
 </body>
 
