rewrite randomize function, add probabilty array with possible spins and render random images on page

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 <h1 class="animate__animated animate__flash">Super Slots</h1>
 
 <table id ="machine">
-<tr id="slots">
-<td class="animate__animated animate__flash" id="slot1"><img src="/imgs/seven.jpg" height="100%%" width="100%%"></td>
-<td class="animate__animated animate__flash" id="slot2"><img src="/imgs/crown.jpg" height="100%%" width="100%%"></td>
-<td class="animate__animated animate__flash" id="slot3"><img src="/imgs/seven.jpg" height="100%%" width="100%%"></td>
+<tr class="animate__animated animate__flash" id="slots">
+<td id="slot1"><img src="/imgs/seven.jpg" height="100%%" width="100%%"></td>
+<td id="slot2"><img src="/imgs/crown.jpg" height="100%%" width="100%%"></td>
+<td id="slot3"><img src="/imgs/seven.jpg" height="100%%" width="100%%"></td>
 </tr>
 </table>
 
