add working place bets function with win and loss message

--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
 </table>
 <button class="animate__animated animate__flash"  id="spin">Spin!</button>
 <button class="animate__animated animate__flash"  id="reset">Play Again</button>
-
-<button class="animate__animated animate__flash"  id="bets">Place Bets</button>
-<input class="animate__animated animate__flash" id="input" type="number" value=0></input>
-<h3>Wins/Losses</h3>
+<h3 id="winloss">Place your bet to spin:</h3>
+<input class="animate__animated animate__flash" id="input" value=0></input>
+<h3>Wins/Losses:</h3>
 <h3 id="display">0</h3>
 
 
