complete init and render functions to enable cash out/reset button

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 </tr>
 </table>
 <button class="animate__animated animate__flash"  id="spin">Spin!</button>
-<button class="animate__animated animate__flash"  id="reset">Play Again</button>
+<button class="animate__animated animate__flash"  id="reset">Cash Out</button>
 <h3 id="winloss">Place your bet to spin:</h3>
 <input class="animate__animated animate__flash" id="input" value=0></input>
-<h3>Bet Balance:</h3>
+<h3>Earnings:</h3>
 <h3 id="display">0</h3>
 
 
