change image links from local files to imgur links

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 <table id ="machine">
 <tr class="animate__animated animate__flash" id="slots">
-<td id="slot1"><img src="/imgs/seven.jpg" height="100%%" width="100%%"></td>
-<td id="slot2"><img src="/imgs/crown.jpg" height="100%%" width="100%%"></td>
-<td id="slot3"><img src="/imgs/seven.jpg" height="100%%" width="100%%"></td>
+<td id="slot1"><img src="https://i.imgur.com/hbwrmPy.jpg" height="100%%" width="100%%"></td>
+<td id="slot2"><img src="https://i.imgur.com/hbwrmPy.jpg" height="100%%" width="100%%"></td>
+<td id="slot3"><img src="https://i.imgur.com/hbwrmPy.jpg" height="100%%" width="100%%"></td>
 </tr>
 </table>
 <button class="animate__animated animate__flash"  id="spin">Spin!</button>
